[tool.poetry]
name = "poketypes"
version = "0.1.0"
description = "Automated classes with full typehinting support for pokemon, abilities, items, and so much more"
authors = ["Trevor Wieland"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^2.4.2"

[tool.poetry.group.dev.dependencies]
protobuf = "^4.24.4"
mypy-protobuf = "^3.5.0"
pytest = "^7.4.2"
requests = "^2.31.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
