[tool.poetry]
name = "poketypes"
version = "0.1.5"
description = "Automated classes with full typehinting support for pokemon, abilities, items, and so much more"
authors = ["Trevor Wieland <trevor_wieland@mac.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/trevorWieland/poketypes"


[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^2.4.2"
protobuf = "^4.24.4"

[tool.poetry.group.dev.dependencies]
mypy-protobuf = "^3.5.0"
pytest = "^7.4.2"
requests = "^2.31.0"
notebook = "^7.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry_bumpversion.file."poketypes/__init__.py"]