[tool.poetry]
name = "poketypes"
version = "0.2.2"
description = "Automated classes with full typehinting support for pokemon, abilities, items, and so much more"
authors = ["Trevor Wieland <trevor_wieland@mac.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/trevorWieland/poketypes"
documentation = "https://trevorwieland.github.io/poketypes/"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
pydantic = "^2.4.2"
protobuf = "^4.24.4"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
mypy-protobuf = "^3.5.0"
pytest = "^7.4.2"
requests = "^2.31.0"
notebook = "^7.0.4"
isort = "^5.12.0"
black = "^23.9.1"
flake8 = "^6.1.0"
flake8-pyproject = "^1.2.3"
pydoclint = {extras = ["flake8"], version = "^0.3.6"}
mkdocs = "^1.5.3"
mkdocstrings = {extras = ["python"], version = "^0.23.0"}
mkdocs-material = "^9.4.6"
markdown-mdantic = "^2.1.0"
flake8-pydocstyle = "^0.2.2"
pandas = "^2.1.1"
tqdm = "^4.66.1"
flake8-bugbear = "^23.9.16"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry_bumpversion.file."poketypes/__init__.py"]

[tool.flake8]
max-line-length = 120
count = true
exclude = ['dexdata_pb2.py', 'dexdata_pb2.pyi']
per-file-ignores = [
    '__init__.py:F401',
    '__init__.py:D104',
]
style = 'google'
require-return-section-when-returning-nothing = true

[tool.pydoclint]
style = 'google'
exclude = ['dexdata_pb2.py', 'dexdata_pb2.pyi']
require-return-section-when-returning-nothing = true